--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 sudo: false
 language: go
+go_import_path: e8vm.io/e8vm
 
 go:
     - 1.5
     - tip
-
-install:
-    - go get e8vm.io/e8vm/...
-
-script:
-    - go test e8vm.io/e8vm/...
