--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 
 install:
     - go get ./...
-    - go get -u e8vm.io/tools
+    - go get -u e8vm.io/tools/cmd/e8chk
     - go get -u github.com/golang/lint/golint
 
 script:
