--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
     - go get -u github.com/golang/lint/golint
 
 script:
+    - test -z `gofmt -s -l .`
     - go test ./...
     - e8chk -path="e8vm.io/e8vm"
     - golint ./...
