--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 sudo: false
 language: go
-go_import_path: e8vm.io/e8vm
+go_import_path: shanhu.io/smlvm
 
 go:
     - 1.7
 
 install:
     - go get ./...
-    - go get e8vm.io/tools/cmd/e8chk
+    - go get shanhu.io/tools/cmd/e8chk
     - go get github.com/golang/lint/golint
 
 script:
     - test -z `gofmt -s -l .`
     - go test ./...
-    - e8chk -path="e8vm.io/e8vm"
+    - e8chk -path="shanhu.io/smlvm"
     - golint ./...
